# lottery_py

./: .travis.yml  README.md  setup.cfg  tox.ini
src/: __main__.py
src/lotofacil/: lotofacil.py
src/lotomania/: lotomania.py
src/mega/: mega.py
test/: mytest.py
test/lotofacil/: test_lotofacil.py
test/lotomania/: test_lotomania.py
test/mega/: test_mega.py
