[metadata]
name = lottery_py
version = 0.0.1
license = 
description = generating set of lottery numbers
long_description = README.md
author = Márcio Kuroki
author_email = marciokuroki@gmail.com
classifiers= 

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =   

[options.packages.find]
where=src